--- a/.classpath
+++ b/.classpath
@@ -3,7 +3,7 @@
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="src" path="gen"/>
 	<classpathentry exported="true" kind="con" path="com.android.ide.eclipse.adt.ANDROID_FRAMEWORK"/>
-	<classpathentry kind="lib" path="C:/Users/Jacobo/java/signpost-commonshttp4-1.1-SNAPSHOT.jar"/>
-	<classpathentry kind="lib" path="C:/Users/Jacobo/java/signpost-core-1.1-SNAPSHOT.jar"/>
+	<classpathentry kind="lib" path="lib/signpost-commonshttp4-1.1-SNAPSHOT.jar"/>
+	<classpathentry kind="lib" path="lib/signpost-core-1.1-SNAPSHOT.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
