--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-	package="org.tarrio.cheepcheep" android:versionName="0.93" android:versionCode="0930">
+	package="org.tarrio.cheepcheep" android:versionCode="0931" android:versionName="0.931">
 	<application android:label="@string/app_name" android:icon="@drawable/cheepcheepicon" android:description="@string/app_description">
 		<activity android:name=".HomeTimelineActivity" android:label="@string/app_name"
 			android:configChanges="mcc|mnc|touchscreen|keyboard|keyboardHidden|navigation|orientation|screenLayout|fontScale" android:allowTaskReparenting="true">
